--- a/nginx.conf
+++ b/nginx.conf
@@ -45,6 +45,10 @@ http {
       ';
     }
 
+    location /static/ {
+      alias static/;
+    }
+
     #location /favicon.ico {
     #  alias static/favicon/favicon.ico;
     #}
