--- a/nginx.conf
+++ b/nginx.conf
@@ -46,6 +46,7 @@ http {
     }
 
     location /static/ {
+      add_header Access-Control-Allow-Origin https://f5.guard13007.com:9153;
       alias static/;
     }
 
