access control bullshit

--- a/nginx.conf
+++ b/nginx.conf
@@ -46,7 +46,7 @@ http {
     }
 
     location /static/ {
-      add_header Access-Control-Allow-Origin https://f5.guard13007.com:9153;
+      add_header Access-Control-Allow-Origin https://f5.guard13007.com;
       alias static/;
     }
 
