--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "users"]
 	path = users
 	url = https://github.com/lazuscripts/users
+[submodule "githook"]
+	path = githook
+	url = git@github.com:lazuscripts/githook.git
